--- a/pryArmanini-ClinicaSp1-EjerResolver.csproj
+++ b/pryArmanini-ClinicaSp1-EjerResolver.csproj
@@ -46,7 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="clsArchivo.cs" />
     <Compile Include="clsEspecialidad.cs" />
+    <Compile Include="clsMedico.cs" />
     <Compile Include="frmEspecialidad.cs">
       <SubType>Form</SubType>
     </Compile>
